--- a/src/sections/product-featured-collection.liquid
+++ b/src/sections/product-featured-collection.liquid
@@ -1,27 +1,27 @@
 {% assign eyebrow_text = section.settings.eyebrow_text %}
-{% assign display_text = section.settings.display_text %}
+{% assign heading_text = section.settings.heading_text %}
 {% assign paragraph_text = section.settings.paragraph_text %}
 {% assign featured_collection = collections[section.settings.collection] %}
-{% assign cta_text_1 = section.settings.cta_text_1 %}
-{% assign cta_url_1 = section.settings.cta_url_1 %}
-{% assign cta_type_1 = section.settings.cta_type_1 %}
+{% assign link_text = section.settings.link_text %}
+{% assign link_url = section.settings.link_url %}
+{% assign link_style = section.settings.link_style %}
 
 {% comment %} Render HTML Content? {% endcomment %}
 {% if eyebrow_text != blank %}
   {% assign show_rendered_content = true %}
-{% elsif display_text != blank %}
+{% elsif heading_text != blank %}
   {% assign show_rendered_content = true %}
 {% elsif paragraph_text != blank %}
   {% assign show_rendered_content = true %}  
 {% elsif featured_collection != blank %}
   {% assign show_rendered_content = true %}
-{% elsif cta_text_1 != blank %}
+{% elsif link_text != blank %}
   {% assign show_rendered_content = true %}    
-{% elsif cta_url_1 != blank %}
+{% elsif link_url != blank %}
   {% assign show_rendered_content = true %}  
-{% elsif cta_url_1 != blank %}
+{% elsif link_url != blank %}
   {% assign show_rendered_content = true %}
-{% elsif cta_type_1 != blank %}
+{% elsif link_style != blank %}
   {% assign show_rendered_content = true %}      
 {% else %}
   {% assign show_rendered_content = false %}
@@ -30,10 +30,10 @@
 {% if show_rendered_content == true %}
   {% render 'section-featured-collection'
               paragraph_text: paragraph_text,
-              display_text: display_text,
-              cta_text_1: cta_text_1,
-              cta_url_1: cta_url_1,
-              cta_type_1: cta_type_1,
+              heading_text: heading_text,
+              link_text: link_text,
+              link_url: link_url,
+              link_style: link_style,
               featured_collection: featured_collection
   %}
 {% endif %}
@@ -71,90 +71,90 @@
       {
         "type":   "range",
         "label": "Padding top - small devices",
-        "id": "padding_top",
+        "id": "pt",
         "min":       0,
         "max":       5,
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with screen widths less than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"  
       },
       {
         "type":   "range",
         "label": "Padding bottom - small devices",
-        "id": "padding_bottom",
+        "id": "pb",
         "min":       0,
         "max":       5,
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with screen widths less than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"  
       },
       {
         "type":   "range",
         "label": "Margin top - small devices",
-        "id": "margin_top",
+        "id": "mt",
         "min":       0,
         "max":       5,
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with screen widths less than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"  
       },
       {
         "type":   "range",
         "label": "Margin bottom - small devices",
-        "id": "margin_bottom",
+        "id": "mb",
         "min":       0,
         "max":       5,
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with screen widths less than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"  
       },
       {
         "type":   "range",
         "label": "Padding top - medium & up devices",
-        "id": "padding_top_md_up",
+        "id": "pt_md_up",
         "min":       0,
         "max":       5,
         "step":      1,
         "default":   5,
         "unit": "%",
-        "info": "For devices with screen widths greater than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"  
       },
       {
         "type":   "range",
         "label": "Padding bottom - medium & up devices",
-        "id": "padding_bottom_md_up",
+        "id": "pb_md_up",
         "min":       0,
         "max":       5,
         "step":      1,
         "default":   5,
         "unit": "%",
-        "info": "For devices with screen widths greater than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"  
       },
       {
         "type":   "range",
         "label": "Margin top - medium & up devices",
-        "id": "margin_top_md_up",
+        "id": "mt_md_up",
         "min":       0,
         "max":       5,
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with screen widths greater than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"  
       },
       {
         "type":   "range",
         "label": "Margin bottom - medium & up devices",
-        "id": "margin_bottom_md_up",
+        "id": "mb_md_up",
         "min":       0,
         "max":       5,
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with screen widths greater than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"  
       },
       { 
         "type": "select",
@@ -181,7 +181,7 @@
       },
       {
         "type": "image_picker",
-        "id": "bg_image_large",
+        "id": "bg_image_lg",
         "label": "Background Image - Medium & Up Devices"
       },
       {
@@ -224,7 +224,7 @@
       },
        {
         "type": "range",
-        "id": "header_container_col_large",
+        "id": "header_container_col_lg",
         "min": 1,
         "max": 12,
         "step": 1,
@@ -246,7 +246,7 @@
       },
       {
         "type": "select",
-        "id": "header_container_justify_container_large",
+        "id": "header_container_justify_container_lg",
         "label": "Justify content container - Medium & Large devices",
         "options": [
           { "value": "justify-content-md-start", "label": "Left"},
@@ -258,7 +258,7 @@
       },
       {
         "type": "select",
-        "id": "header_container_text_alignment",
+        "id": "header_container_text_align",
         "label": "Text alignment - Small devices",
         "options": [
           { "value": "text-left", "label": "Left"},
@@ -270,7 +270,7 @@
       }, 
       {
         "type": "select",
-        "id": "header_container_text_alignment_large",
+        "id": "header_container_text_align_lg",
         "label": "Text alignment - Medium & Large devices",
         "options": [
           { "value": "text-md-left", "label": "Left"},
@@ -291,7 +291,7 @@
       },
       {
         "type": "select",
-        "id": "badge_style",
+        "id": "eyebrow_style",
         "label": "Eyebrow style",
         "options": [
           { "value": "badge-primary", "label": "Primary"},
@@ -302,18 +302,19 @@
           { "value": "badge-info", "label": "Info"},
           { "value": "badge-light", "label": "Light"},
           { "value": "badge-dark", "label": "Dark"}
-        ]
+        ],
+        "default": "badge-dark"
       }, 
       {
         "type": "text",
-        "id": "display_text",
+        "id": "heading_text",
         "label": "Heading",
         "default": "Featured collection"
       },
       { 
         "type": "select",
-        "id": "display_style",
-        "label": "Display text style",
+        "id": "heading_style",
+        "label": "Heading Text Style",
         "options": [
           { "value": "display-1", "label": "Display 1"},
           { "value": "display-2", "label": "Display 2"},
@@ -362,18 +363,18 @@
       },
       {
         "type": "text",
-        "id": "cta_text_1",
-        "label": "CTA Text"
+        "id": "link_text",
+        "label": "Link Text"
       },
       {
         "type": "url",
-        "id": "cta_url_1",
-        "label": "CTA URL"
+        "id": "link_url",
+        "label": "Link Destination"
       },
       {
         "type": "select",
-        "id": "cta_type_1",
-        "label": "CTA Type",
+        "id": "link_style",
+        "label": "Link Style",
         "options": [
           { "value": "btn-primary", "label": "Primary"},
           { "value": "btn-secondary", "label": "Secondary"},
