--- a/src/sections/product-image-content.liquid
+++ b/src/sections/product-image-content.liquid
@@ -10,12 +10,12 @@
 {% endif %}
 
 {% if product.metafields.custom_fields.s_img_content_img_lg != blank %}
-  {% assign image_url_large = product.metafields.custom_fields.s_img_content_img_lg %}
+  {% assign image_url_lg = product.metafields.custom_fields.s_img_content_img_lg %}
 {% else %}
-  {% assign image_url_large = section.settings.image_large | img_url: '1000x' %}
+  {% assign image_url_lg = section.settings.image_lg | img_url: '1000x' %}
 {% endif %}
-{% if image_url_large contains 'no-image' %}
-  {% assign image_url_large = blank %}
+{% if image_url_lg contains 'no-image' %}
+  {% assign image_url_lg = blank %}
 {% endif %}
 
 {% if product.metafields.custom_fields.s_img_content_eyebrow_txt != blank %}
@@ -31,19 +31,19 @@
 {% endif %}
 
 {% if product.metafields.custom_fields.s_img_content_disp_txt != blank %}
-  {% assign display_text = product.metafields.custom_fields.s_img_content_disp_txt %}
+  {% assign heading_text = product.metafields.custom_fields.s_img_content_disp_txt %}
 {% else %}
-  {% assign display_text = section.settings.display_text %}
+  {% assign heading_text = section.settings.heading_text %}
 {% endif %}
 
 {% comment %} Render HTML Content? {% endcomment %}
 {% if image_url != blank %}
   {% assign show_rendered_content = true %}
-{% elsif image_url_large != blank %}
+{% elsif image_url_lg != blank %}
   {% assign show_rendered_content = true %}
 {% elsif eyebrow_text != blank %}
   {% assign show_rendered_content = true %}  
-{% elsif display_text != blank %}
+{% elsif heading_text != blank %}
   {% assign show_rendered_content = true %}
 {% elsif paragraph_text != blank %}
   {% assign show_rendered_content = true %} 
@@ -54,9 +54,9 @@
 {% if show_rendered_content == true %}
   {% render 'section-image-content',
               image_url: image_url,
-              image_url_large: image_url_large,
+              image_url_lg: image_url_lg,
               eyebrow_text: eyebrow_text,
-              display_text: display_text,
+              heading_text: heading_text,
               paragraph_text: paragraph_text
   %}
 {% endif %}
@@ -93,7 +93,7 @@
       },             
       { 
         "type": "select",
-        "id": "content_order_large",
+        "id": "content_order_lg",
         "label": "Content position",
         "info": "Large devices only. On small devices, image stacks first and is followed by the content.",
         "options": [
@@ -105,90 +105,90 @@
       {
         "type":   "range",
         "label": "Padding top - small devices",
-        "id": "padding_top",
+        "id": "pt",
         "min":       0,
         "max":       5,
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with screen widths less than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"  
       },
       {
         "type":   "range",
         "label": "Padding bottom - small devices",
-        "id": "padding_bottom",
+        "id": "pb",
         "min":       0,
         "max":       5,
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with screen widths less than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"  
       },
       {
         "type":   "range",
         "label": "Margin top - small devices",
-        "id": "margin_top",
+        "id": "mt",
         "min":       0,
         "max":       5,
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with screen widths less than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"  
       },
       {
         "type":   "range",
         "label": "Margin bottom - small devices",
-        "id": "margin_bottom",
+        "id": "mb",
         "min":       0,
         "max":       5,
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with screen widths less than 768px"  
+        "info": "For devices with Screen sizes smaller than 768px"  
       },
       {
         "type":   "range",
         "label": "Padding top - medium & up devices",
-        "id": "padding_top_md_up",
+        "id": "pt_md_up",
         "min":       0,
         "max":       5,
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with screen widths greater than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"  
       },
       {
         "type":   "range",
         "label": "Padding bottom - medium & up devices",
-        "id": "padding_bottom_md_up",
+        "id": "pb_md_up",
         "min":       0,
         "max":       5,
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with screen widths greater than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"  
       },
       {
         "type":   "range",
         "label": "Margin top - medium & up devices",
-        "id": "margin_top_md_up",
+        "id": "mt_md_up",
         "min":       0,
         "max":       5,
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with screen widths greater than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"  
       },
       {
         "type":   "range",
         "label": "Margin bottom - medium & up devices",
-        "id": "margin_bottom_md_up",
+        "id": "mb_md_up",
         "min":       0,
         "max":       5,
         "step":      1,
         "default":   0,
         "unit": "%",
-        "info": "For devices with screen widths greater than 768px"  
+        "info": "For devices with Screen sizes larger than 768px"  
       },
       { 
         "type": "select",
@@ -215,7 +215,7 @@
       },
       {
         "type": "image_picker",
-        "id": "bg_image_large",
+        "id": "bg_image_lg",
         "label": "Background Image - Medium & Up Devices"
       },      
       { 
@@ -234,7 +234,7 @@
       },
       {
         "type": "range",
-        "id": "header_container_col_large",
+        "id": "header_container_col_lg",
         "min": 1,
         "max": 12,
         "step": 1,
@@ -256,7 +256,7 @@
       },
       {
         "type": "select",
-        "id": "header_container_justify_container_large",
+        "id": "header_container_justify_container_lg",
         "label": "Justify content container - Medium & Large devices",
         "options": [
           { "value": "justify-content-md-start", "label": "Left"},
@@ -268,7 +268,7 @@
       },
       {
         "type": "select",
-        "id": "header_container_text_alignment",
+        "id": "header_container_text_align",
         "label": "Text alignment - Small devices",
         "options": [
           { "value": "text-left", "label": "Left"},
@@ -280,7 +280,7 @@
       }, 
       {
         "type": "select",
-        "id": "header_container_text_alignment_large",
+        "id": "header_container_text_align_lg",
         "label": "Text alignment - Medium & Large devices",
         "options": [
           { "value": "text-md-left", "label": "Left"},
@@ -301,7 +301,7 @@
       },     
       {
         "type": "image_picker",
-        "id": "image_large",
+        "id": "image_lg",
         "label": "Image - Medium & Up devices"
       },
       {
@@ -323,7 +323,7 @@
       },
       {
         "type": "select",
-        "id": "badge_style",
+        "id": "eyebrow_style",
         "label": "Eyebrow style",
         "options": [
           { "value": "badge-primary", "label": "Primary"},
@@ -334,17 +334,18 @@
           { "value": "badge-info", "label": "Info"},
           { "value": "badge-light", "label": "Light"},
           { "value": "badge-dark", "label": "Dark"}
-        ]
+        ],
+        "default": "badge-dark"
       }, 
       {
         "type": "text",
-        "id": "display_text",
-        "label": "Header"
+        "id": "heading_text",
+        "label": "Heading Text"
       },
       {
         "type": "select",
-        "id": "display_style",
-        "label": "Display text style",
+        "id": "heading_style",
+        "label": "Heading Text Style",
         "options": [
           { "value": "display-1", "label": "Display 1"},
           { "value": "display-2", "label": "Display 2"},
@@ -388,18 +389,18 @@
       },
       {
         "type": "text",
-        "id": "cta_text_1",
-        "label": "CTA Text"
+        "id": "link_text",
+        "label": "Link Text"
       },
       {
         "type": "url",
-        "id": "cta_url_1",
-        "label": "CTA URL"
+        "id": "link_url",
+        "label": "Link Destination"
       },
       {
         "type": "select",
-        "id": "cta_type_1",
-        "label": "CTA Type",
+        "id": "link_style",
+        "label": "Link Style",
         "options": [
           { "value": "btn-primary", "label": "Primary"},
           { "value": "btn-secondary", "label": "Secondary"},
@@ -419,42 +420,7 @@
           { "value": "btn-outline-light", "label": "Light - Outline"},
           { "value": "btn-outline-dark", "label": "Dark - Outline"}
         ],
-        "default": "btn-secondary"
-      },
-      {
-        "type": "text",
-        "id": "cta_text_2",
-        "label": "CTA Text"
-      },
-      {
-        "type": "url",
-        "id": "cta_url_2",
-        "label": "CTA URL"
-      },
-      {
-        "type": "select",
-        "id": "cta_type_2",
-        "label": "CTA Type",
-        "options": [
-          { "value": "btn-primary", "label": "Primary"},
-          { "value": "btn-secondary", "label": "Secondary"},
-          { "value": "btn-success", "label": "Success"},
-          { "value": "btn-danger", "label": "Danger"},
-          { "value": "btn-warning", "label": "Warning"},
-          { "value": "btn-info", "label": "Info"},
-          { "value": "btn-light", "label": "Light"},
-          { "value": "btn-dark", "label": "Dark"},
-          { "value": "btn-link", "label": "Link"},
-          { "value": "btn-outline-primary", "label": "Primary - Outline"},
-          { "value": "btn-outline-secondary", "label": "Secondary - Outline"},
-          { "value": "btn-outline-success", "label": "Success - Outline"},
-          { "value": "btn-outline-danger", "label": "Danger - Outline"},
-          { "value": "btn-outline-warning", "label": "Warning - Outline"},
-          { "value": "btn-outline-info", "label": "Info - Outline"},
-          { "value": "btn-outline-light", "label": "Light - Outline"},
-          { "value": "btn-outline-dark", "label": "Dark - Outline"}
-        ],
-        "default": "btn-secondary"
+        "default": "btn-outline-dark"
       }
     ]
   }
