--- a/src/sections/product.liquid
+++ b/src/sections/product.liquid
@@ -17,8 +17,8 @@
             {% assign image_alt_text = featured_image.alt | escape %}
             <div class="col-12">
               {% render 'image-object',
-                          image_url_small: image_src,
-                          image_url_large: image_src,
+                          image_url: image_src,
+                          image_url_lg: image_src,
                           image_alt_text: image_alt_text,
                           image_aspect_ratio: '1by1'
               %}
