--- a/src/snippets/content-object.liquid
+++ b/src/snippets/content-object.liquid
@@ -10,142 +10,249 @@
   {% render 'content-object',
               id: { string } - required only if using background image
               block_bg_image_url: { string } - optional
-              block_bg_image_url_large: { string } - optional
-              text_alignment: { string } - optional
-              cta_type_1: { string } - optional
-              cta_url_1: { string } - optional
-              cta_text_1: { string } - optional
-              cta_type_2: { string } - optional
-              cta_url_2: { string } - optional
-              cta_text_2: { string } - optional              
-              cta_type_3: { string } - optional
-              cta_url_3: { string } - optional
-              cta_text_4: { string } - optional
-              cta_type_4: { string } - optional
-              cta_url_4: { string } - optional
-              cta_text_4: { string } - optional                            
+              block_bg_image_url_lg: { string } - optional
+              text_align: { string } - optional
+              link_style: { string } - optional
+              link_url: { string } - optional
+              link_text: { string } - optional   
+              pt : { string } - optional
+              pr: { string } - optional
+              pb: { string } - optional
+              pl: { string } - optional
+              mt: { string } - optional
+              mr: { string } - optional
+              mb: { string } - optional
+              ml: { string } - optional
+              pt_md_up: { string } - optional
+              pr_md_up: { string } - optional
+              pb_md_up: { string } - optional
+              pl_md_up: { string } - optional
+              mt_md_up: { string } - optional
+              mr_md_up: { string } - optional
+              mb_md_up: { string } - optional
+              ml_md_up: { string } - optional
   %}
 
 {% endcomment %}
 
-{% comment %} Content Settings {% endcomment %}
-{% if id != blank %}
-  {% assign id = id %}
+{% comment %} Defaults {% endcomment %}
+{% if pt != blank %}
+  {% assign pt = pt %} 
 {% else %}
-  {% assign id = false %}
+  {% assign pt = 0 %} 
 {% endif %}
 
-{% if bg_image_url != blank %}
-  {% if bg_image_url contains 'no-image' %}
-    {% assign bg_image_url = false %}
-  {% else %}
-    {% assign bg_image_url = bg_image_url %}
-  {% endif %}
+{% if pr != blank %}
+  {% assign pr = pr %}
+{% else %}  
+  {% assign pr = 0 %}
+{% endif %}  
+
+{% if pb != blank %}
+  {% assign pb = pb %}
+{% else %}  
+  {% assign pb = 0 %}
+{% endif %}  
+
+{% if pl != blank %}
+  {% assign pl = pl %}
+{% else %}  
+  {% assign pl = 0 %}
+{% endif %}  
+
+{% if mt != blank %}
+  {% assign mt = mt %}
+{% else %}  
+  {% assign mt = 0 %}
+{% endif %}  
+
+{% if mr != blank %}
+  {% assign mr = mr %}
+{% else %}  
+  {% assign mr = 0 %}
+{% endif %}  
+
+{% if mb != blank %}
+  {% assign mb = mb %}
+{% else %}  
+  {% assign mb = 0 %}
+{% endif %}  
+
+{% if ml != blank %}
+  {% assign ml = ml %}
+{% else %}  
+  {% assign ml = 0 %}
+{% endif %}  
+
+{% if pt_md_up != blank %}  
+  {% assign pt_md_up = pt_md_up %}
+{% else %}  
+  {% assign pt_md_up = 0 %}
+{% endif %}  
+
+{% if pr_md_up != blank %}  
+  {% assign pr_md_up = pr_md_up %}
+{% else %}  
+  {% assign pr_md_up = 0 %}
+{% endif %}  
+
+{% if pb_md_up != blank %}
+  {% assign pb_md_up = pb_md_up %}
+{% else %}  
+  {% assign pb_md_up = 0 %}
+{% endif %}  
+
+{% if pl_md_up != blank %}  
+  {% assign pl_md_up = pl_md_up %}
+{% else %}  
+  {% assign pl_md_up = 0 %}
+{% endif %}  
+
+{% if mt_md_up != blank %}
+  {% assign mt_md_up = mt_md_up %}
+{% else %}  
+  {% assign mt_md_up = 0 %}
+{% endif %}  
+
+{% if mr_md_up != blank %}
+  {% assign mr_md_up = mr_md_up %}
+{% else %}  
+  {% assign mr_md_up = 0 %}
+{% endif %}  
+
+{% if mb_md_up != blank %}
+  {% assign mb_md_up = mb_md_up %}
+{% else %}  
+  {% assign mb_md_up = 0 %}
+{% endif %}  
+
+{% if ml_md_up != blank %}
+  {% assign ml_md_up = ml_md_up %}
+{% else %}  
+  {% assign ml_md_up = 0 %}
+{% endif %}  
+
+{% if text_align != blank %}
+  {% assign text_align = text_align %}
 {% else %}
-  {% assign bg_image_url = false %}
+  {% assign text_align = 'text-center' %}
 {% endif %}
 
-{% if bg_image_url_large != blank %}
-  {% if bg_image_url_large contains 'no-image' %}
-    {% assign bg_image_url_large = false %}
-  {% else %}
-    {% assign bg_image_url_large = bg_image_url_large %}
-  {% endif %}
-{% else %}
-  {% assign bg_image_url_large = false %}
-{% endif %}
-
-{% if text_alignment != blank %}
-  {% assign text_alignment = text_alignment %}
-{% else %}
-  {% assign text_alignment = 'text-center' %}
-{% endif %}
-
-{% if text_alignment_large != blank %}
-  {% assign text_alignment_large = text_alignment_large %}
+{% if text_align_lg != blank %}
+  {% assign text_align_lg = text_align_lg %}
 {% else %} 
-  {% assign text_alignment_large = 'text-md-center' %}
+  {% assign text_align_lg = 'text-md-center' %}
 {% endif %}
 
-{% assign text_alignment_classes = text_alignment | append: ' ' | append: text_alignment_large %}
-
+{% assign text_align_classes = text_align | append: ' ' | append: text_align_lg %}
+ 
 {% comment %} Object Classes {% endcomment %}
-{% assign block_classes = block_classes %}
-{% if bg_image_url %}
-  {% assign block_classes = block_classes | append: ' h-100' %}
+{% assign el_classes = 'w-100' %}
+
+{% if pt != 0 %}
+  {% assign el_classes = el_classes | append: ' pt-' | append: pt %} 
+{% endif %}
+
+{% if pr != 0 %}
+  {% assign el_classes = el_classes | append: ' pr-' | append: pr %}
+{% endif %}
+
+{% if pb != 0 %}  
+  {% assign el_classes = el_classes | append: ' pb-' | append: pb %}
+{% endif %}
+
+{% if pl != 0 %}
+  {% assign el_classes = el_classes | append: ' pl-' | append: pl %}
+{% endif %}
+
+{% if mt != 0 %}
+  {% assign el_classes = el_classes | append: ' mt-' | append: mt %}
+{% endif %}
+
+{% if mr != 0 %}
+  {% assign el_classes = el_classes | append: ' mr-' | append: mr %}
+{% endif %}
+
+{% if mb != 0 %}
+  {% assign el_classes = el_classes | append: ' mb-' | append: mb %}
+{% endif %}
+
+{% if ml != 0 %}
+  {% assign el_classes = el_classes | append: ' ml-' | append: ml %}
+{% endif %}
+
+{% if pt_md_up != 0 %}
+  {% assign el_classes = el_classes | append: ' pt-md-' | append: pt_md_up %}
+{% endif %}
+
+{% if pr_md_up != 0 %}
+  {% assign el_classes = el_classes | append: ' pr-md-' | append: pr_md_up %}
+{% endif %}
+
+{% if pb_md_up != 0 %}
+  {% assign el_classes = el_classes | append: ' pb-md-' | append: pb_md_up %}
+{% endif %}
+
+{% if pl_md_up != 0 %}
+  {% assign el_classes = el_classes | append: ' pl-md-' | append: pl_md_up %}
+{% endif %}
+
+{% if mt_md_up != 0 %}
+  {% assign el_classes = el_classes | append: ' mt-md-' | append: mt_md_up %}
+{% endif %}
+
+{% if mr_md_up != 0 %}
+  {% assign el_classes = el_classes | append: ' mr-md-' | append: mr_md_up %}
+{% endif %}
+
+{% if mb_md_up != 0 %}
+  {% assign el_classes = el_classes | append: ' mb-md-' | append: mb_md_up %}
+{% endif %}
+
+{% if ml_md_up != 0 %}
+  {% assign el_classes = el_classes | append: ' ml-md-' | append: ml_md_up %}
 {% endif %}
 
 {% comment %} Render {% endcomment %}
-{% if eyebrow_text != blank %}
+{% if link_text != blank %}
   {% assign render_content = true %}
-{% elsif display_text != blank %}
+{% elsif eyebrow_text != blank %}
+  {% assign render_content = true %}  
+{% elsif heading_text != blank %}
   {% assign render_content = true %}
 {% elsif paragraph_text != blank %}
   {% assign render_content = true %}  
-{% elsif cta_url_1 != blank %}
-  {% assign render_content = true %}   
-{% elsif cta_url_2 != blank %}
-  {% assign render_content = true %}     
 {% else %}
   {% assign render_content = false %}
 {% endif %}
 
 {% if render_content == true %}
-  {% comment %} TODO: This is still rendering all 0 value classes {% endcomment %}  
-  <div class="{{ block_classes }}" {% if id != blank %}id="content-object-{{ id }}{% endif %}">
-
-    {% comment %} Background Image {% endcomment %}
-    {% if bg_image_url %}
-      <style>
-        #content-object-{{ id }} { background-image: url({{ bg_image_url }}); background-size: cover; }
-      </style>
-    {% elsif bg_image_url_large %}
-      <style>
-        #content-object-{{ id }} { background-image: url({{ bg_image_url_large }}); background-size: cover; }
-      </style>
-    {% endif %}
-
-    {% if bg_image_url_large %}
-      <style>
-        @media (min-width: 992px) {
-          #content-object-{{ id }} { background-image: url({{ bg_image_url_large }}); background-size: cover; }
-        }
-      </style>
-    {% elsif bg_image_url %}  
-      <style>
-        @media (min-width: 992px) {
-          #content-object-{{ id }} { background-image: url({{ bg_image_url }}); background-size: cover; }
-        }
-      </style>
-    {% endif %}  
-  
-    {% render 'eyebrow-text', 
-              text: eyebrow_text,
-              text_alignment: text_alignment_classes,
-              badge_style: badge_style,
-    %} 
-    {% render 'display-text',
-              text: display_text,
-              text_color: content_color,
-              text_alignment: text_alignment_classes,
-              display_size: display_style
+  <div {%if el_classes %}class="{{ el_classes }}"{% endif %}>
+    {% render 'eyebrow-element', 
+                text: eyebrow_text,
+                text_align: text_align_classes,
+                eyebrow_style: eyebrow_style
     %}
 
-    {% render 'paragraph-text',
-              text: paragraph_text,
-              text_color: content_color,
-              text_alignment: text_alignment_classes
+    {% render 'heading-element',
+                text: heading_text,
+                text_color: content_color,
+                text_align: text_align_classes,
+                display_size: heading_style
     %}
-    {% render 'cta-block',
-                text_alignment: text_alignment_classes,
-                cta_text_1: cta_text_1,
-                cta_url_1: cta_url_1,
-                cta_type_1: cta_type_1,
-                cta_text_2: cta_text_2,
-                cta_url_2: cta_url_2,
-                cta_type_2: cta_type_2,
+
+    {% render 'paragraph-element',
+                text: paragraph_text,
+                text_color: content_color,
+                text_align: text_align_classes
     %}
-  {% if block_classes != blank %}
+    {% render 'link-element',
+                text_align: text_align_classes,
+                link_text: link_text,
+                link_url: link_url,
+                link_style: link_style
+    %}
+  {% if el_classes != blank %}
     </div>
   {% endif %}
 {% endif %}
