--- a/src/snippets/paragraph-element.liquid
+++ b/src/snippets/paragraph-element.liquid
@@ -1,16 +1,15 @@
 {% comment %} 
 
   -----------------------------------------------------------------------------
-  Display Text
+  Paragraph Element
   -----------------------------------------------------------------------------
 
   Usage:
 
-  {% render 'display-text',
-              text: { string }
-              display_size: { string } expects display-1,2,3,4
-              text_alignment: { string } 'text-center', 'text-left'
-              text_color: { string } 'text-primary', 'text-secondary'
+  {% render 'paragraph-element',
+              text: { string } - expects richtext
+              text_color: { string } expects text-color class
+              text_align: { string } 'text-center', 'text-left'
   %}
 
 {% endcomment %}
@@ -24,22 +23,16 @@
   {% assign classes = classes | append: 'text-primary' %}
 {% endif %}
 
-{% if text_alignment != blank %}
-  {% assign classes = classes | append: ' ' | append: text_alignment %}
+{% if text_align != blank %}
+  {% assign classes = classes | append: ' ' | append: text_align %}
 {% else %}
   {% assign classes = classes | append: ' ' | append: 'text-left' %}
-{% endif %}
-
-{% if display_size != blank %}
-  {% assign classes = classes | append: ' ' | append: display_size %}
-{% else %}
-  {% assign classes = classes | append: ' ' | append: 'display-2' %}
 {% endif %}
 
 {% comment %} HTML content {% endcomment %}
 {% capture 'html_content' %}
   {% if text != blank %}
-    <h2 class="{{ classes }}">{{ text }}</h2>
+    <div class="{{ classes }}">{{ text }}</div> 
   {% endif %}
 {% endcapture %}
 
