--- a/src/snippets/section-media-promo.liquid
+++ b/src/snippets/section-media-promo.liquid
@@ -1,22 +1,22 @@
 {% comment %} Global Section Settings {% endcomment %}
 {% assign background_color = section.settings.background_color %}
-{% assign justify_content_large = section.settings.justify_content_large %}
+{% assign justify_content_lg = section.settings.justify_content_lg %}
 {% assign bg_image_url = section.settings.bg_image | img_url: '1000x' %}
 {% if bg_image_url contains 'no-image' %}
   {% assign bg_image_url = blank %}
 {% endif %}
-{% assign bg_image_url_large = section.settings.bg_image_large | img_url: '1000x' %}
-{% if bg_image_url_large contains 'no-image' %}
-  {% assign bg_image_url_large = blank %}
+{% assign bg_image_url_lg = section.settings.bg_image_lg | img_url: '1000x' %}
+{% if bg_image_url_lg contains 'no-image' %}
+  {% assign bg_image_url_lg = blank %}
 {% endif %}
 
 {% comment %} Header Settings {% endcomment %}
 {% assign header_container_col = section.settings.header_container_col %}
-{% assign header_container_col_large = section.settings.header_container_col_large  %}
+{% assign header_container_col_lg = section.settings.header_container_col_lg  %}
 {% assign header_container_justify_container = section.settings.header_container_justify_container %}
-{% assign header_container_justify_container_large = section.settings.header_container_justify_container_large %}
-{% assign header_container_text_alignment = section.settings.header_container_text_alignment %}
-{% assign header_container_text_alignment_large = section.settings.header_container_text_alignment_large %}
+{% assign header_container_justify_container_lg = section.settings.header_container_justify_container_lg %}
+{% assign header_container_text_align = section.settings.header_container_text_align %}
+{% assign header_container_text_align_lg = section.settings.header_container_text_align_lg %}
 
 {% comment %} Media Container Settings {% endcomment %}
 {% for block in section.blocks limit:1 %}
@@ -30,16 +30,16 @@
       %}
     {% elsif block.type == 'image' %}
       {% assign image_url = block.settings.image.src | img_url: '600x' %}
-      {% assign image_url_large = block.settings.image_large.src | img_url: '800x' %}
+      {% assign image_url_lg = block.settings.image_lg.src | img_url: '800x' %}
       {% assign image_aspect_ratio = block.settings.image_aspect_ratio %}
-      {% if block.settings.image_large.alt != blank%}
-        {% assign image_alt_text = block.settings.image_large.alt %}
+      {% if block.settings.image_lg.alt != blank%}
+        {% assign image_alt_text = block.settings.image_lg.alt %}
       {% elsif block.settings.image.alt != blank %}
         {% assign image_alt_text = block.settings.image.alt %}
       {% endif %}
       {% render 'image-object',
-                  image_url_small: image_url,
-                  image_url_large: image_url_large,
+                  image_url: image_url,
+                  image_url_lg: image_url_lg,
                   image_alt_text: image_alt_text
                   image_aspect_ratio: image_aspect_ratio
       %}    
@@ -49,7 +49,7 @@
 
 {% comment %} Media Container Classes {% endcomment %}
 {% assign media_classes = 'col-12 col-md-7 mb-3 mb-md-0 d-flex align-items-start flex-column' %}
-{% assign media_classes = media_classes | append: ' ' | append: justify_content_large %}
+{% assign media_classes = media_classes | append: ' ' | append: justify_content_lg %}
 
 {% comment %} Image Content Container Settings {% endcomment %}
 {% assign image_aspect_ratio = section.settings.image_aspect_ratio %}
@@ -59,60 +59,57 @@
 {% if image_url contains 'no-image' %}
   {% assign image_url = blank %}
 {% endif %}
-{% assign image_url_large = section.settings.image_large | img_url: '1000x' %}
-{% if image_url_large contains 'no-image' %}
-  {% assign image_url_large = blank %}
+{% assign image_url_lg = section.settings.image_lg | img_url: '1000x' %}
+{% if image_url_lg contains 'no-image' %}
+  {% assign image_url_lg = blank %}
 {% endif %}
 
 {% comment %} Image Class Container Settings {% endcomment %}
 {% assign image_classes = 'mb-4' %}
 
 {% comment %} Content Container Settings {% endcomment %}
-{% assign content_order_large = section.settings.content_order_large %}
-{% assign badge_style = section.settings.badge_style %}
+{% assign content_order_lg = section.settings.content_order_lg %}
+{% assign eyebrow_style = section.settings.eyebrow_style %}
 {% assign eyebrow_text = section.settings.eyebrow_text %}
-{% assign display_style = section.settings.display_style %}
-{% assign display_text = section.settings.display_text %}
+{% assign heading_style = section.settings.heading_style %}
+{% assign heading_text = section.settings.heading_text %}
 {% assign content_color = section.settings.content_color %}
 {% assign paragraph_text = section.settings.paragraph_text %}
-{% assign cta_text_1 = section.settings.cta_text_1 %}
-{% assign cta_url_1 = section.settings.cta_url_1 %}
-{% assign cta_type_1 = section.settings.cta_type_1 %}
-{% assign cta_text_2 = section.settings.cta_text_2 %}
-{% assign cta_url_2 = section.settings.cta_url_2 %}
-{% assign cta_type_2 = section.settings.cta_type_2 %}
+{% assign link_text = section.settings.link_text %}
+{% assign link_url = section.settings.link_url %}
+{% assign link_style = section.settings.link_style %}
 
 {% comment %} Content Container Wrapper Classes {% endcomment %}
 {% assign content_container_wrapper_classes = 'col-12 col-md-5' %} 
-{% assign content_container_wrapper_classes = content_container_wrapper_classes | append: ' ' | append: content_order_large %}
+{% assign content_container_wrapper_classes = content_container_wrapper_classes | append: ' ' | append: content_order_lg %}
 {% assign content_container_wrapper_classes = content_container_wrapper_classes | append: ' ' | append: 'd-flex align-items-start flex-column' %}
-{% assign content_container_wrapper_classes = content_container_wrapper_classes | append: ' ' | append: justify_content_large %}
+{% assign content_container_wrapper_classes = content_container_wrapper_classes | append: ' ' | append: justify_content_lg %}
 
 
 {% comment %} Content Container Classes {% endcomment %}
 {% assign content_classes = 'pr-5 my-3' %}
 
 {% comment %} Section Layout Settings {% endcomment %}
-{% assign padding_top = section.settings.padding_top %}
-{% assign padding_bottom = section.settings.padding_bottom %}
-{% assign padding_top_md_up = section.settings.padding_top_md_up %}
-{% assign padding_bottom_md_up = section.settings.padding_bottom_md_up %}
-{% assign margin_top = section.settings.margin_top %}
-{% assign margin_bottom = section.settings.margin_bottom %}
-{% assign margin_top_md_up = section.settings.margin_top_md_up %}
-{% assign margin_bottom_md_up = section.settings.margin_bottom_md_up %}
+{% assign pt = section.settings.pt %}
+{% assign pb = section.settings.pb %}
+{% assign pt_md_up = section.settings.pt_md_up %}
+{% assign pb_md_up = section.settings.pb_md_up %}
+{% assign mt = section.settings.mt %}
+{% assign mb = section.settings.mb %}
+{% assign mt_md_up = section.settings.mt_md_up %}
+{% assign mb_md_up = section.settings.mb_md_up %}
 
 {% comment %} Section Layout Classes {% endcomment %}
 {% assign section_classes =  'position-relative' %}
 {% assign section_classes = section_classes | append: ' ' | append: background_color %}
-{% assign section_classes = section_classes | append: ' pt-' | append: padding_top %}
-{% assign section_classes = section_classes | append: ' pb-' | append: padding_bottom %}
-{% assign section_classes = section_classes | append: ' pt-md-' | append: padding_top_md_up %}
-{% assign section_classes = section_classes | append: ' pb-md-' | append: padding_bottom_md_up %}
-{% assign section_classes = section_classes | append: ' mt-' | append: margin_top %}
-{% assign section_classes = section_classes | append: ' mb-' | append: margin_bottom %}
-{% assign section_classes = section_classes | append: ' mt-md-' | append: margin_top_md_up %}
-{% assign section_classes = section_classes | append: ' mb-md-' | append: margin_bottom_md_up %}
+{% assign section_classes = section_classes | append: ' pt-' | append: pt %}
+{% assign section_classes = section_classes | append: ' pb-' | append: pb %}
+{% assign section_classes = section_classes | append: ' pt-md-' | append: pt_md_up %}
+{% assign section_classes = section_classes | append: ' pb-md-' | append: pb_md_up %}
+{% assign section_classes = section_classes | append: ' mt-' | append: mt %}
+{% assign section_classes = section_classes | append: ' mb-' | append: mb %}
+{% assign section_classes = section_classes | append: ' mt-md-' | append: mt_md_up %}
+{% assign section_classes = section_classes | append: ' mb-md-' | append: mb_md_up %}
 
 {% comment %} Container Settings {% endcomment %}
 {% assign container = section.settings.container %}
@@ -130,26 +127,20 @@
 {% comment %} Render HTML Content? {% endcomment %}
 {% if image_url != blank %}
   {% assign show_rendered_content = true %}
-{% elsif image_url_large != blank %}
+{% elsif image_url_lg != blank %}
   {% assign show_rendered_content = true %}
 {% elsif eyebrow_text != blank %}
   {% assign show_rendered_content = true %}  
-{% elsif display_text != blank %}
+{% elsif heading_text != blank %}
   {% assign show_rendered_content = true %}
 {% elsif paragraph_text != blank %}
   {% assign show_rendered_content = true %}    
-{% elsif cta_text_1 != blank %}
+{% elsif link_text != blank %}
   {% assign show_rendered_content = true %}  
-{% elsif cta_url_1 != blank %}
+{% elsif link_url != blank %}
   {% assign show_rendered_content = true %}
-{% elsif cta_type_1 != blank %}
-  {% assign show_rendered_content = true %}      
-{% elsif cta_text_2 != blank %}
-  {% assign show_rendered_content = true %}  
-{% elsif cta_url_2 != blank %}
-  {% assign show_rendered_content = true %}
-{% elsif cta_type_2 != blank %}
-  {% assign show_rendered_content = true %}    
+{% elsif link_style != blank %}
+  {% assign show_rendered_content = true %}       
 {% else %}
   {% assign show_rendered_content = false %}
 {% endif %}
@@ -162,16 +153,16 @@
       <style>
         [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url }}); background-size: cover; }
       </style>
-    {% elsif bg_image_url_large != blank %}  
+    {% elsif bg_image_url_lg != blank %}  
       <style>
-        [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url_large }}); background-size: cover; }
+        [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url_lg }}); background-size: cover; }
       </style>
     {% endif %}
 
-    {% if bg_image_url_large != blank %}
+    {% if bg_image_url_lg != blank %}
       <style>
         @media (min-width: 992px) {
-          [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url_large }}); background-size: cover; }
+          [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url_lg }}); background-size: cover; }
         }
       </style>
     {% elsif bg_image_url != blank %}  
@@ -188,10 +179,10 @@
           {{ rendered_media }}
         </div>
         <div class="{{ content_container_wrapper_classes }}">
-          {% if image_url != blank or image_url_large != blank %}
+          {% if image_url != blank or image_url_lg != blank %}
             {% render 'image-object'
-                        image_url_small: image_url,
-                        image_url_large: image_url_large,
+                        image_url: image_url,
+                        image_url_lg: image_url_lg,
                         image_alt_text: image_alt_text,
                         image_aspect_ratio: image_aspect_ratio_classes
             %}
@@ -199,17 +190,17 @@
           <div class="{{ content_classes }}">
             {% render 'content-object' 
                     eyebrow_text: eyebrow_text, 
-                    badge_style: badge_style,
+                    eyebrow_style: eyebrow_style,
                     content_color: content_color,
-                    display_text: display_text,
-                    display_style: display_style,
+                    heading_text: heading_text,
+                    heading_style: heading_style,
                     paragraph_text: paragraph_text,
                     col: header_container_col,
-                    col_large: header_container_col_large,
+                    col_lg: header_container_col_lg,
                     justify_container: header_container_justify_container,
-                    justify_container_large: header_container_justify_container_large,
-                    text_alignment: header_container_text_alignment,
-                    text_alignment_large: header_container_text_alignment_large
+                    justify_container_lg: header_container_justify_container_lg,
+                    text_align: header_container_text_align,
+                    text_align_lg: header_container_text_align_lg
             %}
           </div>
         </div>
