--- a/src/snippets/section-product-meta.liquid
+++ b/src/snippets/section-product-meta.liquid
@@ -4,23 +4,23 @@
 {% if bg_image_url contains 'no-image' %}
   {% assign bg_image_url = blank %}
 {% endif %}
-{% assign bg_image_url_large = section.settings.bg_image_large | img_url: '1000x' %}
-{% if bg_image_url_large contains 'no-image' %}
-  {% assign bg_image_url_large = blank %} 
+{% assign bg_image_url_lg = section.settings.bg_image_lg | img_url: '1000x' %}
+{% if bg_image_url_lg contains 'no-image' %}
+  {% assign bg_image_url_lg = blank %} 
 {% endif %}
 
 {% comment %} Header Settings {% endcomment %}
 {% assign header_container_col = section.settings.header_container_col %}
-{% assign header_container_col_large = section.settings.header_container_col_large  %}
+{% assign header_container_col_lg = section.settings.header_container_col_lg  %}
 {% assign header_container_justify_container = section.settings.header_container_justify_container %}
-{% assign header_container_justify_container_large = section.settings.header_container_justify_container_large %}
-{% assign header_container_text_alignment = section.settings.header_container_text_alignment %}
-{% assign header_container_text_alignment_large = section.settings.header_container_text_alignment_large %}
+{% assign header_container_justify_container_lg = section.settings.header_container_justify_container_lg %}
+{% assign header_container_text_align = section.settings.header_container_text_align %}
+{% assign header_container_text_align_lg = section.settings.header_container_text_align_lg %}
 
 {% comment %} Content Container Settings {% endcomment %}
-{% assign badge_style = section.settings.badge_style %}
+{% assign eyebrow_style = section.settings.eyebrow_style %}
 
-{% assign display_style = section.settings.display_style %}
+{% assign heading_style = section.settings.heading_style %}
 
 {% assign content_color = section.settings.content_color %}
 
@@ -29,37 +29,37 @@
 {% assign video_url = section.settings.video_url %}
 {% assign video_aspect_ratio = section.settings.video_aspect_ratio %}
 {% assign video_container_col = section.settings.header_container_col %}
-{% assign video_container_col_large = section.settings.video_container_col_large  %}
+{% assign video_container_col_lg = section.settings.video_container_col_lg  %}
 {% assign video_container_justify_container = section.settings.video_container_justify_container %}
-{% assign video_container_justify_container_large = section.settings.video_container_justify_container_large %}
-{% assign video_container_text_alignment = section.settings.video_container_text_alignment %}
-{% assign video_container_text_alignment_large = section.settings.video_container_text_alignment_large %}
+{% assign video_container_justify_container_lg = section.settings.video_container_justify_container_lg %}
+{% assign video_container_text_align = section.settings.video_container_text_align %}
+{% assign video_container_text_align_lg = section.settings.video_container_text_align_lg %}
 
 {% comment %} Content Container Classes {% endcomment %}
 {% assign content_classes = 'col-12' %} 
 {% assign content_classes = content_classes | append: ' ' | append: 'py-4 py-sm-0 mb-4' %}
 
 {% comment %} Section Layout Settings {% endcomment %}
-{% assign padding_top = section.settings.padding_top %}
-{% assign padding_bottom = section.settings.padding_bottom %}
-{% assign padding_top_md_up = section.settings.padding_top_md_up %}
-{% assign padding_bottom_md_up = section.settings.padding_bottom_md_up %}
-{% assign margin_top = section.settings.margin_top %}
-{% assign margin_bottom = section.settings.margin_bottom %}
-{% assign margin_top_md_up = section.settings.margin_top_md_up %}
-{% assign margin_bottom_md_up = section.settings.margin_bottom_md_up %}
+{% assign pt = section.settings.pt %}
+{% assign pb = section.settings.pb %}
+{% assign pt_md_up = section.settings.pt_md_up %}
+{% assign pb_md_up = section.settings.pb_md_up %}
+{% assign mt = section.settings.mt %}
+{% assign mb = section.settings.mb %}
+{% assign mt_md_up = section.settings.mt_md_up %}
+{% assign mb_md_up = section.settings.mb_md_up %}
 
 {% comment %} Section Layout Classes {% endcomment %}
 {% assign section_classes =  'position-relative' %}
 {% assign section_classes = section_classes | append: ' ' | append: background_color %}
-{% assign section_classes = section_classes | append: ' pt-' | append: padding_top %}
-{% assign section_classes = section_classes | append: ' pb-' | append: padding_bottom %}
-{% assign section_classes = section_classes | append: ' pt-md-' | append: padding_top_md_up %}
-{% assign section_classes = section_classes | append: ' pb-md-' | append: padding_bottom_md_up %}
-{% assign section_classes = section_classes | append: ' mt-' | append: margin_top %}
-{% assign section_classes = section_classes | append: ' mb-' | append: margin_bottom %}
-{% assign section_classes = section_classes | append: ' mt-md-' | append: margin_top_md_up %}
-{% assign section_classes = section_classes | append: ' mb-md-' | append: margin_bottom_md_up %}
+{% assign section_classes = section_classes | append: ' pt-' | append: pt %}
+{% assign section_classes = section_classes | append: ' pb-' | append: pb %}
+{% assign section_classes = section_classes | append: ' pt-md-' | append: pt_md_up %}
+{% assign section_classes = section_classes | append: ' pb-md-' | append: pb_md_up %}
+{% assign section_classes = section_classes | append: ' mt-' | append: mt %}
+{% assign section_classes = section_classes | append: ' mb-' | append: mb %}
+{% assign section_classes = section_classes | append: ' mt-md-' | append: mt_md_up %}
+{% assign section_classes = section_classes | append: ' mb-md-' | append: mb_md_up %}
 
 {% comment %} Container Settings {% endcomment %}
 {% assign container = section.settings.container %}
@@ -83,16 +83,16 @@
     <style>
       [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url }}); background-size: cover; }
     </style>
-  {% elsif bg_image_url_large != blank %}  
+  {% elsif bg_image_url_lg != blank %}  
     <style>
-      [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url_large }}); background-size: cover; }
+      [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url_lg }}); background-size: cover; }
     </style>
   {% endif %}
 
-  {% if bg_image_url_large != blank %}
+  {% if bg_image_url_lg != blank %}
     <style>
       @media (min-width: 992px) {
-        [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url_large }}); background-size: cover; }
+        [data-section-id="{{ section.id }}"] { background-image: url({{ bg_image_url_lg }}); background-size: cover; }
       }
     </style>
   {% elsif bg_image_url != blank %}  
@@ -108,17 +108,17 @@
       <div class="{{ content_classes }}">
         {% render 'content-object' 
                   eyebrow_text: eyebrow_text, 
-                  badge_style: badge_style,
+                  eyebrow_style: eyebrow_style,
                   content_color: content_color,
-                  display_text: display_text,
-                  display_style: display_style,
+                  heading_text: heading_text,
+                  heading_style: heading_style,
                   paragraph_text: paragraph_text,
                   col: header_container_col,
-                  col_large: header_container_col_large,
+                  col_lg: header_container_col_lg,
                   justify_container: header_container_justify_container,
-                  justify_container_large: header_container_justify_container_large,
-                  text_alignment: header_container_text_alignment,
-                  text_alignment_large: header_container_text_alignment_large
+                  justify_container_lg: header_container_justify_container_lg,
+                  text_align: header_container_text_align,
+                  text_align_lg: header_container_text_align_lg
         %}
       </div>
     </div>
